feat: implement translate for auth pages, mix 2 translate if we don't have some key

--- a/localization/en.json
+++ b/localization/en.json
@@ -1,5 +1,11 @@
 {
   "HomePage": {
-    "title": "Hello world!"
+    "title": "He, en!"
+  },
+  "AuthPages": {
+    "labelEmail": "Email",
+    "labelPassword": "Password",
+    "btnSignUp": "Sign up",
+    "btnSignIn": "Sign in"
   }
 }
