fix: width button for ru language

--- a/localization/ru.json
+++ b/localization/ru.json
@@ -5,7 +5,7 @@
   "AuthPages": {
     "labelEmail": "Email",
     "labelPassword": "Пароль",
-    "btnSignUp": "Зарегестироваться",
+    "btnSignUp": "Регистрация",
     "btnSignIn": "Войти",
     "btnSignOut": "Выйти"
   }
