feat: add Russian translations

--- a/localization/en.json
+++ b/localization/en.json
@@ -8,5 +8,51 @@
     "btnSignUp": "Sign\u00A0up",
     "btnSignIn": "Sign\u00A0in",
     "btnSignOut": "Sign\u00A0out"
+  },
+  "WelcomePage": {
+    "sectionWelcomeTitle": "Hello",
+    "sectionWelcomeSubtitle": "Welcome to a lightweight and powerful application for working with REST and GraphQL API.",
+    "sectionWelcomeDescription": "We have combined the capabilities of Postman and GraphiQL in one simple and convenient application.",
+    "sectionWelcomebtnSignUp": "Sign Up",
+    "sectionWelcomebtnSignIn": "Sign In",
+    "sectionWelcomebtnHistory": "History",
+    "sectionProjectTitle": "Our Project",
+    "sectionProjectSubtitle": "Our tool offers a streamlined interface that simplifies your workflow:",
+    "sectionProjectList": "Test endpoints effortlessly; Analyze responses quickly; Manage API requests with ease; Switch seamlessly between REST and GraphQL; Customize your requests and view responses in real-time",
+    "sectionProjecDescriptionText": "It's a one-stop solution for API development and testing, designed to make your work faster, easier, and more productive. Dive in and explore how our tool can transform your API interactions, making them smoother and more efficient than ever before.",
+    "sectionTeamTitle": "Our Team",
+    "sectionCourseTitle": "Our Learning Path",
+    "sectionCourseSubtitle": "RS School's React course is an advanced educational program aimed at developers who want to master React and become professional front-end developers.",
+    "sectionCourseDescriptionTitle": "Main features of the course:",
+    "sectionCourseFeature": "1. Deep learning of React; 2. Project-oriented approach; 3. Mentoring and code review; 4. Support for modern tools; 5. Community and Career Opportunities",
+    "sectionCourseDescriptionText": "RS School's React course is a great opportunity for developers to deepen their knowledge and skills by creating modern web applications using one of the most in-demand tools on the market.",
+    "memberNameMikhail": "Mikhail Semenuk",
+    "memberDescriptionMikhail": "Mike is an incredibly intelligent and hardworking known for his outstanding self-organization and discipline. Mike also has a passion for automation, often writing small scripts to streamline tasks and make life easier. Additionally, he fosters a friendly and positive atmosphere within the team. Without a doubt, his contributions to our project are invaluable.",
+    "memberRoleMikhail": "Front-end developer",
+    "memberContributionsMikhail": "Created pages for an application (Sign In / Sign Up);Clear feedback to PRs",
+    "memberEducationMikhail": "Brest State Technical University (2016);RS Schools Course «JavaScript/Front-end. Stage 0» 2023;RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;RS Schools Course «React. Stage 3» 2024",
+    "memberWorkMikhail": "2023-2018 - Work in a leasing company, develop CRM and API for integrations, automate and simplify the work of employees.;2018-2017 - 1C developer, Python + Odoo;2016-2017 - System administrator, development and support of the organization’s website, programmer.",
+    "memberLanguagesMikhail": "English - B2;Belarusian - native;Russian - native;Polish - B1",
+    "memberNameValerie": "Valerie Ivashkevich",
+    "memberDescriptionValerie": "Valerie is exceptionally self-disciplined, responsible, and creative, with a remarkable work ethic and a deep passion for web development. Throughout the project, she consistently showed a strong drive to create a unique and appealing application. Her contributions have been truly invaluable and crucial to the project's success.",
+    "memberRoleValerie": "Team Lead & Front-end developer",
+    "memberContributionsValerie": "Team organization;Set the repository and task Kanban board;Created pages for an application (GraphiQL route);Checking PRs and clear feedback",
+    "memberEducationValerie": "RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;BSEU (the Faculty of International Business Communications) 2026;The Web Developer Bootcamp 2023 from Colt Steele;RS Schools Course «JavaScript/Front-end. Stage 0» 2023;RS Schools Course «React. Stage 3» 2024",
+    "memberWorkValerie": "In the summer of 2022 she worked as an interpreter and translator at the company — oral and written translation from Russian into English and German, and vice versa, participation in tenders, participation in negotiations as an interpreter.;Currently, Valerie is devoting all her free time to taking the RS school front-end course",
+    "memberLanguagesValerie": "Russian/Belarusian - native;English - C1 advanced;German - B1;Chinese - A1 basic",
+    "memberNameViktoriya": "Viktoriya Rashchepkina",
+    "memberDescriptionViktoriya": "Vika is exceptionally diligent and responsible, bringing a high level of quality and attention to every task she undertakes. Throughout the project, she gave her all to contribute to the development of our project. Vika is an amazing and positive member of our team!",
+    "memberRoleViktoriya": "Front-end developer",
+    "memberContributionsViktoriya": "Created pages for an application (Welcome page);Setup auth with Firebase;Checking PRs and clear feedback",
+    "memberEducationViktoriya": "Medical college;RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;RS Schools Course «React. Stage 3» 2024",
+    "memberWorkViktoriya": "Currently, Vika is devoting all her free time to programming and taking the RS school front-end course",
+    "memberLanguagesViktoriya": "Russian - native;English - B1",
+    "contributionsTitle": "Contributions",
+    "educationTitle": "Education",
+    "workTitle": "Work",
+    "languagesTitle": "Languages",
+    "sectionWelcomeBtnRestClient": "REST Client",
+    "sectionWelcomeBtnGraphiQLClient": "GraphiQL Client",
+    "sectionWelcomeBtnHistory": "History"
   }
 }
