fix: correct the translation

--- a/localization/ru.json
+++ b/localization/ru.json
@@ -37,9 +37,9 @@
     "memberDescriptionValerie": "Валерия исключительно самодисциплинирована, ответственна и креативна, с выдающейся трудовой этикой и глубокой страстью к веб-разработке. На протяжении проекта она постоянно демонстрировала сильное стремление создать уникальное и привлекательное приложение. Её вклад был действительно бесценен и решающим для успеха проекта.",
     "memberRoleValerie": "Руководитель команды и Front-end разработчик",
     "memberContributionsValerie": "Организация команды;Настройка репозитория и доски задач Kanban;Создание страниц для приложения (маршрут GraphiQL);Проверка PR и четкая обратная связь",
-    "memberEducationValerie": "Курс RS Schools «JavaScript/Front-end. Stage 1-2» 2024;БСЭУ (Факультет международного бизнес-коммуникации) 2026;Курс «The Web Developer Bootcamp 2023» от Colt Steele;Курс RS Schools «JavaScript/Front-end. Stage 0» 2023;Курс RS Schools «React. Stage 3» 2024",
-    "memberWorkValerie": "Летом 2022 года работала переводчиком и устным переводчиком в компании — устный и письменный перевод с русского на английский и немецкий, и наоборот, участие в тендерах, участие в переговорах в качестве переводчика.;В настоящее время Валерия посвящает все свое свободное время прохождению курса RS school по front-end",
-    "memberLanguagesValerie": "Русский/Белорусский - родной;Английский - C1 продвинутый;Немецкий - B1;Китайский - A1 базовый",
+    "memberEducationValerie": "Курс RS Schools «JavaScript/Front-end. Stage 1-2» 2024;БГЭУ (Факультет международных бизнес-коммуникаций) 2026;Курс «The Web Developer Bootcamp 2023» от Colt Steele;Курс RS Schools «JavaScript/Front-end. Stage 0» 2023;Курс RS Schools «React. Stage 3» 2024",
+    "memberWorkValerie": "Летом 2022 года работала устным и письменным переводчиком в компании. Выполняла устный и письменный перевод с русского на английский и немецкий, и наоборот. Участвовала в тендерах, переговорах в качестве переводчика.;В настоящее время Валерия посвящает все свое свободное время прохождению курса RS school по front-end",
+    "memberLanguagesValerie": "Русский/Белорусский - родной;Английский - C1 продвинутый;Немецкий - B1;Китайский - A1 начальный",
     "memberNameViktoriya": "Виктория Ращепкина",
     "memberDescriptionViktoriya": "Виктория исключительно усердна и ответственна, принося высокий уровень качества и внимания к каждой задаче, которую она выполняет. На протяжении проекта она отдала все свои силы для развития нашего проекта. Вика замечательный и позитивный член нашей команды!",
     "memberRoleViktoriya": "Front-end developer",
