--- a/localization/ru.json
+++ b/localization/ru.json
@@ -54,5 +54,17 @@
     "sectionWelcomeBtnRestClient": "REST Клиент",
     "sectionWelcomeBtnGraphiQLClient": "GraphiQL Клиент",
     "sectionWelcomeBtnHistory": "История"
+  },
+  "PlaygroundInputs": {
+    "urlUnput": "Введите URL-адрес...",
+    "sdlUrlUnput": "Введите SDL-адрес..."
+  },
+  "BurgerMenu": {
+    "signOutBtn": "Выйти",
+    "signInBtn": "Войти"
+  },
+  "GraphiqlToolsBar": {
+    "varsBtn": "Переменные",
+    "headersBtn": "Заголовки"
   }
 }
