--- a/localization/ru.json
+++ b/localization/ru.json
@@ -54,5 +54,15 @@
     "sectionWelcomeBtnRestClient": "REST Клиент",
     "sectionWelcomeBtnGraphiQLClient": "GraphiQL Клиент",
     "sectionWelcomeBtnHistory": "История"
+  },
+  "Docs": {
+    "docsTitle": "Документация",
+    "queriesTitle": "Запросы",
+    "mutationsTitle": "Мутации",
+    "subscriptionsTitle": "Подписки",
+    "descriptionTitle": "Описание",
+    "typeTitle": "Тип",
+    "argsTitle": "Аргументы",
+    "fieldsTitle": "Поля"
   }
 }
