feat: documentation section (#26)
* feat: implement the query editor and json viewer components for the playground

* refactor: format code

* feat: add adaptive layout for the graphql playground and global breakpoints

* feat: add prettify functionality to the editor

* feat: implement the query editor and json viewer components for the playground

* refactor: format code

* feat: add adaptive layout for the graphql playground and global breakpoints

* feat: add prettify functionality to the editor

* feat: show the response and change the url when modifying the url endpoint and the request body

* feat: make api calls through the server

* feat: create docs slice and add documentation sections

* feat: add queries section

* refactor: improved code readability

* feat: add fields section

* refactor: improved code readability

* feat: update sdl url saving

* feat: update docs styles and add an error in case of unsuccessful response from the API

* feat: add Russian translations

* fix: fix useEffect problem

---------

Co-authored-by: Valerie Ivashkevich <ivashkevich03@gmail.com>

--- a/localization/en.json
+++ b/localization/en.json
@@ -55,6 +55,16 @@
     "sectionWelcomeBtnGraphiQLClient": "GraphiQL Client",
     "sectionWelcomeBtnHistory": "History"
   },
+  "Docs": {
+    "docsTitle": "Documentation",
+    "queriesTitle": "Queries",
+    "mutationsTitle": "Mutations",
+    "subscriptionsTitle": "Subscriptions",
+    "descriptionTitle": "Description",
+    "typeTitle": "Type",
+    "argsTitle": "Arguments",
+    "fieldsTitle": "Fields"
+  },
   "PlaygroundInputs": {
     "urlUnput": "Enter an endpoint url...",
     "sdlUrlUnput": "Enter a SDL url..."
