feat: add error while receiving data

--- a/localization/ru.json
+++ b/localization/ru.json
@@ -86,6 +86,7 @@
     "HistoryTypeTitle": "Тип:",
     "HistoryMethodTitle": "Метод:",
     "HistoryUrlTitle": "URL-адрес:",
-    "HistoryDateTitle": "Дата:"
+    "HistoryDateTitle": "Дата:",
+    "ErrorLC": "Произошла ошибка при получении истории ваших запросов. Пожалуйста, повторите попытку позже."
   }
 }
