--- a/localization/en.json
+++ b/localization/en.json
@@ -86,6 +86,7 @@
     "HistoryTypeTitle": "Type:",
     "HistoryMethodTitle": "Method:",
     "HistoryUrlTitle": "URL:",
-    "HistoryDateTitle": "Date:"
+    "HistoryDateTitle": "Date:",
+    "ErrorLC": "An error occurred while retrieving your request history. Please try again later."
   }
 }
