--- a/localization/ru.json
+++ b/localization/ru.json
@@ -87,6 +87,9 @@
     "HistoryMethodTitle": "Метод:",
     "HistoryUrlTitle": "URL-адрес:",
     "HistoryDateTitle": "Дата:",
-    "ErrorLC": "Произошла ошибка при получении истории ваших запросов. Пожалуйста, повторите попытку позже."
+    "ErrorLC": "Произошла ошибка при получении истории ваших запросов. Пожалуйста, повторите попытку позже.",
+    "HistoryBtnClear": "Очистить историю",
+    "HistoryBtnAsc": "По возрастанию",
+    "HistoryBtnDesc": "По убыванию"
   }
 }
