fix: correct and update the translation on the Welcome page

--- a/localization/ru.json
+++ b/localization/ru.json
@@ -27,24 +27,24 @@
     "sectionCourseFeature": "1. Глубокое изучение React; 2. Проектно-ориентированный подход; 3. Менторство и код-ревью; 4. Поддержка современных инструментов; 5. Сообщество и карьерные возможности",
     "sectionCourseDescriptionText": "Курс React от RS School — это отличная возможность для разработчиков углубить свои знания и навыки, создавая современные веб-приложения с использованием одного из самых востребованных инструментов на рынке.",
     "memberNameMikhail": "Михаил Семенюк",
-    "memberDescriptionMikhail": "Михаил — невероятно умный и трудолюбивый, известный своим выдающимся самоорганизацией и дисциплиной. Михаил также увлекается автоматизацией, часто пишет небольшие скрипты для упрощения задач и облегчения жизни. Кроме того, он создает дружелюбную и позитивную атмосферу в команде. Его вклад в наш проект бесценен.",
+    "memberDescriptionMikhail": "Михаил — невероятно умный и трудолюбивый член команды, известный своим выдающимся самоорганизацией и дисциплиной. Михаил также увлекается автоматизацией, часто пишет небольшие скрипты для упрощения задач и облегчения жизни. Кроме того, он создает дружелюбную и позитивную атмосферу в команде. Его вклад в наш проект бесценен.",
     "memberRoleMikhail": "Front-end developer",
-    "memberContributionsMikhail": "Создание страниц для приложения (Вход / Регистрация);Четкая обратная связь по PR",
-    "memberEducationMikhail": "Брестский государственный технический университет (2016);Курс RS Schools «JavaScript/Front-end. Stage 0» 2023;Курс RS Schools «JavaScript/Front-end. Stage 1-2» 2024;Курс RS Schools «React. Stage 3» 2024",
-    "memberWorkMikhail": "2023-2018 - Работа в лизинговой компании, разработка CRM и API для интеграций, автоматизация и упрощение работы сотрудников.;2018-2017 - Разработчик 1С, Python + Odoo;2016-2017 - Системный администратор, разработка и поддержка сайта организации, программист.",
+    "memberContributionsMikhail": "Создание страниц для приложения (Вход / Регистрация, RESTful client);Четкая обратная связь по PR;Написание unit и e2e тестов",
+    "memberEducationMikhail": "Брестский государственный технический университет (2016);Курс RS School «JavaScript/Front-end. Stage 0» 2023;Курс RS School «JavaScript/Front-end. Stage 1-2» 2024;Курс RS School «React. Stage 3» 2024",
+    "memberWorkMikhail": "2023-2018 - работа в лизинговой компании, разработка CRM и API для интеграций, автоматизация и упрощение работы сотрудников.;2018-2017 - Разработчик 1С, Python + Odoo;2016-2017 - Системный администратор, разработка и поддержка сайта организации, программист.",
     "memberLanguagesMikhail": "Английский - B2;Белорусский - родной;Русский - родной;Польский - B1",
     "memberNameValerie": "Валерия Ивашкевич",
     "memberDescriptionValerie": "Валерия исключительно самодисциплинирована, ответственна и креативна, с выдающейся трудовой этикой и глубокой страстью к веб-разработке. На протяжении проекта она постоянно демонстрировала сильное стремление создать уникальное и привлекательное приложение. Её вклад был действительно бесценен и решающим для успеха проекта.",
     "memberRoleValerie": "Руководитель команды и Front-end разработчик",
-    "memberContributionsValerie": "Организация команды;Настройка репозитория и доски задач Kanban;Создание страниц для приложения (маршрут GraphiQL);Проверка PR и четкая обратная связь",
-    "memberEducationValerie": "Курс RS Schools «JavaScript/Front-end. Stage 1-2» 2024;БГЭУ (Факультет международных бизнес-коммуникаций) 2026;Курс «The Web Developer Bootcamp 2023» от Colt Steele;Курс RS Schools «JavaScript/Front-end. Stage 0» 2023;Курс RS Schools «React. Stage 3» 2024",
+    "memberContributionsValerie": "Организация команды;Настройка репозитория и управление рабочим процессом при помощи доски задач Kanban;Создание страниц для приложения (маршрут GraphiQL);Проверка PR и четкая обратная связь;Написание unit и e2e тестов",
+    "memberEducationValerie": "Курс RS School «JavaScript/Front-end. Stage 1-2» 2024;БГЭУ (Факультет международных бизнес-коммуникаций) 2026;Курс «The Web Developer Bootcamp 2023» от Colt Steele;Курс RS School «JavaScript/Front-end. Stage 0» 2023;Курс RS School «React. Stage 3» 2024",
     "memberWorkValerie": "Летом 2022 года работала устным и письменным переводчиком в компании. Выполняла устный и письменный перевод с русского на английский и немецкий, и наоборот. Участвовала в тендерах, переговорах в качестве переводчика.;В настоящее время Валерия посвящает все свое свободное время прохождению курса RS school по front-end",
     "memberLanguagesValerie": "Русский/Белорусский - родной;Английский - C1 продвинутый;Немецкий - B1;Китайский - A1 начальный",
     "memberNameViktoriya": "Виктория Ращепкина",
     "memberDescriptionViktoriya": "Виктория исключительно усердна и ответственна, принося высокий уровень качества и внимания к каждой задаче, которую она выполняет. На протяжении проекта она отдала все свои силы для развития нашего проекта. Вика замечательный и позитивный член нашей команды!",
     "memberRoleViktoriya": "Front-end developer",
-    "memberContributionsViktoriya": "Создание страниц для приложения (Страница приветствия);Настройка аутентификации с помощью Firebase;Проверка PR и четкая обратная связь",
-    "memberEducationViktoriya": "Медицинский колледж;Курс RS Schools «JavaScript/Front-end. Stage 1-2» 2024;Курс RS Schools «React. Stage 3» 2024",
+    "memberContributionsViktoriya": "Создание страниц для приложения (Welcome и History страницы);Настройка аутентификации с помощью Firebase;Проверка PR и четкая обратная связь;Написание unit и e2e тестов",
+    "memberEducationViktoriya": "Медицинский колледж;Курс RS School «JavaScript/Front-end. Stage 1-2» 2024;Курс RS School «React. Stage 3» 2024",
     "memberWorkViktoriya": "В настоящее время Вика посвящает все свое свободное время программированию и прохождению курса RS school по front-end",
     "memberLanguagesViktoriya": "Русский - родной;Английский - B1",
     "contributionsTitle": "Вклад",
