--- a/localization/en.json
+++ b/localization/en.json
@@ -27,24 +27,24 @@
     "sectionCourseFeature": "1. Deep learning of React; 2. Project-oriented approach; 3. Mentoring and code review; 4. Support for modern tools; 5. Community and Career Opportunities",
     "sectionCourseDescriptionText": "RS School's React course is a great opportunity for developers to deepen their knowledge and skills by creating modern web applications using one of the most in-demand tools on the market.",
     "memberNameMikhail": "Mikhail Semenuk",
-    "memberDescriptionMikhail": "Mike is an incredibly intelligent and hardworking known for his outstanding self-organization and discipline. Mike also has a passion for automation, often writing small scripts to streamline tasks and make life easier. Additionally, he fosters a friendly and positive atmosphere within the team. Without a doubt, his contributions to our project are invaluable.",
+    "memberDescriptionMikhail": "Mike is an incredibly intelligent and hardworking team member known for his outstanding self-organization and discipline. Mike also has a passion for automation, often writes small scripts to streamline tasks and make life easier. Additionally, he fosters a friendly and positive atmosphere within the team. Without a doubt, his contributions to our project are invaluable.",
     "memberRoleMikhail": "Front-end developer",
-    "memberContributionsMikhail": "Created pages for an application (Sign In / Sign Up);Clear feedback to PRs",
-    "memberEducationMikhail": "Brest State Technical University (2016);RS Schools Course «JavaScript/Front-end. Stage 0» 2023;RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;RS Schools Course «React. Stage 3» 2024",
-    "memberWorkMikhail": "2023-2018 - Work in a leasing company, develop CRM and API for integrations, automate and simplify the work of employees.;2018-2017 - 1C developer, Python + Odoo;2016-2017 - System administrator, development and support of the organization’s website, programmer.",
+    "memberContributionsMikhail": "Created pages for an application (Sign In / Sign Up, RESTful client);Clear feedback to PRs;Unit and e2e testing",
+    "memberEducationMikhail": "Brest State Technical University (2016);The RS School Course «JavaScript/Front-end. Stage 0» 2023;The RS School Course «JavaScript/Front-end. Stage 1-2» 2024;The RS School Course «React. Stage 3» 2024",
+    "memberWorkMikhail": "2023-2018 - work in a leasing company, where Mike developed CRM and API for integrations, automated and simplified the work of employees.;2018-2017 - 1C developer, Python + Odoo;2016-2017 - System administrator, development and support of the organization’s website, programmer.",
     "memberLanguagesMikhail": "English - B2;Belarusian - native;Russian - native;Polish - B1",
     "memberNameValerie": "Valerie Ivashkevich",
     "memberDescriptionValerie": "Valerie is exceptionally self-disciplined, responsible, and creative, with a remarkable work ethic and a deep passion for web development. Throughout the project, she consistently showed a strong drive to create a unique and appealing application. Her contributions have been truly invaluable and crucial to the project's success.",
     "memberRoleValerie": "Team Lead & Front-end developer",
-    "memberContributionsValerie": "Team organization;Set the repository and task Kanban board;Created pages for an application (GraphiQL route);Checking PRs and clear feedback",
-    "memberEducationValerie": "RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;BSEU (the Faculty of International Business Communications) 2026;The Web Developer Bootcamp 2023 from Colt Steele;RS Schools Course «JavaScript/Front-end. Stage 0» 2023;RS Schools Course «React. Stage 3» 2024",
+    "memberContributionsValerie": "Team organization;Setting the repository and managing the workflow with the task Kanban board;Created the page for the application (GraphiQL route);Checking PRs and clear feedback;Unit and e2e testing",
+    "memberEducationValerie": "The RS School Course «JavaScript/Front-end. Stage 1-2» 2024;BSEU (the Faculty of International Business Communications) 2026;The Web Developer Bootcamp 2023 from Colt Steele;The RS School Course «JavaScript/Front-end. Stage 0» 2023;The RS School Course «React. Stage 3» 2024",
     "memberWorkValerie": "In the summer of 2022 she worked as an interpreter and translator at the company — oral and written translation from Russian into English and German, and vice versa, participation in tenders, participation in negotiations as an interpreter.;Currently, Valerie is devoting all her free time to taking the RS school front-end course",
     "memberLanguagesValerie": "Russian/Belarusian - native;English - C1 advanced;German - B1;Chinese - A1 basic",
     "memberNameViktoriya": "Viktoriya Rashchepkina",
     "memberDescriptionViktoriya": "Vika is exceptionally diligent and responsible, bringing a high level of quality and attention to every task she undertakes. Throughout the project, she gave her all to contribute to the development of our project. Vika is an amazing and positive member of our team!",
     "memberRoleViktoriya": "Front-end developer",
-    "memberContributionsViktoriya": "Created pages for an application (Welcome page);Setup auth with Firebase;Checking PRs and clear feedback",
-    "memberEducationViktoriya": "Medical college;RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;RS Schools Course «React. Stage 3» 2024",
+    "memberContributionsViktoriya": "Created pages for the application (Welcome page, History page);Setup auth with Firebase;Checking PRs and clear feedback;Unit and e2e testing",
+    "memberEducationViktoriya": "Medical college;RS Schools Course «JavaScript/Front-end. Stage 1-2» 2024;The RS School Course «React. Stage 3» 2024",
     "memberWorkViktoriya": "Currently, Vika is devoting all her free time to programming and taking the RS school front-end course",
     "memberLanguagesViktoriya": "Russian - native;English - B1",
     "contributionsTitle": "Contributions",
